--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer-dash:1.0.1"
     implementation "androidx.media3:media3-ui:1.0.1"
     implementation "androidx.media3:media3-session:1.0.1"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
 
 // Allow references to generated code
