--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.2.0'
+        compose_version = '1.4.3'
+    }
+    repositories {
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
     }
@@ -12,5 +16,5 @@ plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
-    id("com.google.dagger.hilt.android") version "2.44" apply false
+    id 'com.google.dagger.hilt.android' version "2.44" apply false
 }
