--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation "androidx.navigation:navigation-compose:2.6.0-rc01"
 
+//    color palette
+    implementation 'androidx.palette:palette:1.0.0'
+
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 }
 
